...
    [searchContainerView addSubview:self.searchController.searchBar];
    
    self.definesPresentationContext = YES;
    
    id barButtonAppearanceInSearchBar = [UIBarButtonItem appearanceWhenContainedIn:[UISearchBar class], nil];
    
    [barButtonAppearanceInSearchBar setTitle:@"Done"];
}

- (void)dealloc
{
    [self.searchController.view removeFromSuperview];
}
...
